manifests/kubernetes-dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    pangolin.io/expose: "true"
    pangolin.io/auth: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: k8s-dashboard.elmstreet79.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
